# openmls

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: benches.yml  build.yml  cli.yml  coverage.yml  docs.yml  ds.yml  fuzz.yml  gh-pages.yml  interop_client.yml  new_issue.yml  tests.yml
basic_credential/: Cargo.toml
basic_credential/src/: lib.rs
book/src/: message_validation.md
book/src/user_manual/: identity.md  (+1 more)
cli/: Cargo.toml
cli/src/: backend.rs  identity.rs  main.rs  networking.rs  user.rs
delivery-service/ds/: Cargo.toml
delivery-service/ds-lib/: Cargo.toml
doc/: search-index.js
doc/openmls/: index.html
evercrypt_backend/: Cargo.toml
evercrypt_backend/src/: provider.rs
interop_client/: Cargo.toml
interop_client/src/: main.rs
memory_keystore/: Cargo.toml
memory_keystore/src/: lib.rs
memory_storage/src/: lib.rs
openmls/: Cargo.toml
openmls/benches/: benchmark.rs
openmls/src/: error.rs  key_store.rs  lib.rs  prelude.rs  utils.rs
openmls/src/binary_tree/: test_binary_tree.rs
openmls/src/binary_tree/array_representation/: diff.rs  kat_treemath.rs  mod.rs  tree.rs  treemath.rs
openmls/src/ciphersuite/: aead.rs  codec.rs  hash_ref.rs  hpke.rs  mac.rs  mod.rs  reuse_guard.rs  secret.rs  signature.rs
openmls/src/ciphersuite/tests/: kat_crypto_basics.rs  test_ciphersuite.rs  test_secrets.rs
openmls/src/credentials/: certificate.rs  codec.rs  errors.rs  mod.rs  tests.rs
openmls/src/extensions/: capabilities_extension.rs  codec.rs  errors.rs  external_pub_extension.rs  external_sender_extension.rs  external_senders_extension.rs  life_time_extension.rs  mod.rs  ratchet_tree_extension.rs  required_capabilities.rs  test_extensions.rs  trust_anchor_extension.rs
openmls/src/framing/: codec.rs  errors.rs  message.rs  message_in.rs  message_out.rs  mls_auth_content.rs  mls_auth_content_in.rs  mls_content.rs  mls_content_in.rs  mod.rs  plaintext.rs  private_message.rs  private_message_in.rs  public_message.rs  public_message_in.rs  sender.rs  test_framing.rs  validation.rs
openmls/src/group/: errors.rs  group_context.rs  mod.rs
openmls/src/group/core_group/: apply_proposals.rs  create_commit.rs  create_commit_params.rs  kat_passive_client.rs  kat_welcome.rs  mod.rs  new_from_external_init.rs  new_from_welcome.rs  process.rs  proposals.rs  staged_commit.rs  test_core_group.rs  test_create_commit_params.rs  test_duplicate_extension.rs  test_external_init.rs  test_gce_proposals.rs  test_past_secrets.rs  test_proposals.rs  validation.rs
openmls/src/group/mls_group/: application.rs  config.rs  creation.rs  errors.rs  exporting.rs  extension.rs  leave.rs  membership.rs  mod.rs  processing.rs  proposal.rs  reinit.rs  test_mls_group.rs  updates.rs
openmls/src/group/public_group/: builder.rs  diff.rs  errors.rs  mod.rs  process.rs  staged_commit.rs  tests.rs  validation.rs
openmls/src/group/public_group/diff/: apply_proposals.rs  compute_path.rs
openmls/src/group/tests/: external_add_proposal.rs  external_proposal.rs  external_remove_proposal.rs  kat_messages.rs  kat_transcript_hashes.rs  kat_transcripts.rs  mod.rs  test_commit_validation.rs  test_encoding.rs  test_external_commit_validation.rs  test_framing.rs  test_framing_validation.rs  test_gce_proposals.rs  test_group.rs  test_past_secrets.rs  test_proposal_validation.rs  test_remove_operation.rs  test_update_extensions.rs  test_wire_format_policy.rs  utils.rs
openmls/src/key_packages/: errors.rs  key_package_in.rs  lifetime.rs  mod.rs  test_key_packages.rs
openmls/src/messages/: codec.rs  external_proposals.rs  group_info.rs  mod.rs  proposals.rs  proposals_in.rs  public_group_state.rs
openmls/src/messages/tests/: test_codec.rs  test_export_group_info.rs  test_pgs.rs  test_proposals.rs  test_welcome.rs
openmls/src/schedule/: errors.rs  kat_key_schedule.rs  kat_psk_secret.rs  message_secrets.rs  mod.rs  psk.rs  unit_tests.rs
openmls/src/test_utils/: mod.rs
openmls/src/test_utils/test_framework/: client.rs  errors.rs  mod.rs
openmls/src/tree/: secret_tree.rs  sender_ratchet.rs  treemath.rs
openmls/src/tree/tests_and_kats/kats/: kat_encryption.rs  kat_message_protection.rs  secret_tree.rs
openmls/src/tree/tests_and_kats/unit_tests/: test_hashes.rs  test_index.rs  test_path_keys.rs  test_private_tree.rs  test_resolution.rs  test_secret_tree.rs  test_sender_ratchet.rs  test_tree_truncation.rs  test_treemath.rs
openmls/src/treesync/: diff.rs  errors.rs  mod.rs  node.rs  treekem.rs  treesync_node.rs
openmls/src/treesync/node/: encryption_keys.rs  leaf_node.rs  parent_node.rs  validate.rs
openmls/src/treesync/node/leaf_node/: capabilities.rs
openmls/src/treesync/tests_and_kats/: tests.rs
openmls/src/treesync/tests_and_kats/kats/: kat_tree_kem.rs  kat_tree_operations.rs  kat_tree_validation.rs  kat_treekem.rs
openmls/src/treesync/tests_and_kats/tests/: test_diff.rs
openmls/test_vectors/: kat_messages.json  kat_transcripts.json  passive-client-handling-commit.json  passive-client-random.json  passive-client-welcome.json
openmls/test_vectors_gen/: Cargo.toml
openmls/test_vectors_gen/src/: main.rs
openmls/tests/: book_code.rs  config.json  key_store.rs  test_credentials.rs  test_decryption_key_index.rs  test_external_commit.rs  test_interop_scenarios.rs  test_key_packages.rs  test_managed_api.rs  test_mls_group.rs
openmls_rust_crypto/: Cargo.toml
openmls_rust_crypto/src/: lib.rs  provider.rs
src/: creds.rs  utils.rs
src/framing/: test_framing.rs
src/group/: managed_group.rs
src/key_packages/: codec.rs  mod.rs  test_key_packages.rs
src/messages/: mod.rs
src/tree/: blanked_tree.rs  codec.rs  errors.rs  hash_input.rs  index.rs  mod.rs  node.rs  private_tree.rs  test_hashes.rs  test_private_tree.rs  test_ratchet_tree.rs  test_resolution.rs
tests/: test_group.rs  test_key_packages.rs  test_managed_group.rs
traits/: Cargo.toml
traits/src/: authentication_service.rs  crypto.rs  key_store.rs  random.rs  signatures.rs  traits.rs  types.rs
x509_credential/: Cargo.toml  Readme.md
x509_credential/src/: error.rs  lib.rs
(+183 files in other folders)
