[workspace]
members = [
    "openmls",
    "traits",
    "openmls_rust_crypto",
    "fuzz",
    # "interop_client",
    "memory_keystore",
    "basic_credential",
    "x509_credential"
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1"

[workspace.dependencies.tls_codec]
version = "0.3.0"
features = ["derive", "serde", "mls"]

[workspace.dependencies.tls_codec_derive]
version = "0.3.0"
features = ["derive", "serde", "mls"]

[patch.crates-io.webpki]
package = "rustls-webpki"
path = "../webpki"

[patch.crates-io.pki-types]
package = "rustls-pki-types"
path = "../pki-types"
