[workspace]
members = [
    "openmls",
    "traits",
    "openmls_rust_crypto",
    "fuzz",
    # "interop_client",
    "memory_storage",
    "basic_credential",
    "x509_credential"
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1"

[workspace.dependencies.tls_codec]
version = "0.4"
features = ["derive", "serde", "mls"]

[workspace.dependencies.tls_codec_derive]
version = "0.4"
features = ["derive", "serde", "mls"]
