[package]
name = "openmls_rust_crypto"
authors = ["OpenMLS Authors"]
version = "0.2.0"
edition = "2021"
description = "A crypto backend for OpenMLS implementing openmls_traits using RustCrypto primitives."
license = "MIT"
documentation = "https://docs.rs/openmls_rust_crypto"
repository = "https://github.com/openmls/openmls/tree/main/openmls_rust_crypto"
readme = "README.md"

[dependencies]
async-trait = { workspace = true }
openmls_traits = { version = "0.2.0", path = "../traits" }
openmls_memory_keystore = { version = "0.2.0", path = "../memory_keystore" }
# Rust Crypto dependencies
sha2 = { version = "0.10" }
aes-gcm = { version = "0.10" }
chacha20poly1305 = { version = "0.10" }
hmac = { version = "0.12" }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
p256 = { version = "0.13" }
p384 = { version = "0.13" }
p521 = { version = "0.13" }
hkdf = { version = "0.12" }
rand_core = "0.6"
rand_chacha = { version = "0.3" }
tls_codec = { workspace = true }
zeroize = { version = "1.7", features = ["derive"] }
signature = "2.1"
thiserror = "1.0"
generic-array = "0.14"
hpke = { version = "0.12", features = ["x25519", "p256", "p384", "p521"] }
async-lock = "2.8.0"
