[package]
name = "openmls_traits"
version = "0.2.0"
authors = ["OpenMLS Authors"]
edition = "2021"
description = "Traits used by OpenMLS"
license = "MIT"
documentation = "https://docs.rs/openmls_traits"
repository = "https://github.com/openmls/openmls/tree/main/traits"
readme = "README.md"

[lib]
path = "src/traits.rs"

[features]
default = []
test-utils = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand_core = "0.6"
tls_codec = { workspace = true }
async-trait = { workspace = true }
# for the default signer
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
p256 = "0.13"
p384 = "0.13"
p521 = "0.13"
zeroize = "1.6"
signature = "2.1"
