[package]
name = "test_vectors_gen"
description = "Utility to generate KAT test vectors from a known good version of OpenMLS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Change this version when the "known good" changes - usually the crates.io version
openmls = { version = "0.4", features = ["test-utils"] }
openmls_rust_crypto = "0.1"
hex = "0.4"
serde_json = "1.0"
serde = "1.0"
color-eyre = { version = "0.6", default-features = false }
